# ObjRenderer

./: CMakeLists.txt  ImageUtils.h  ObjRenderer.cpp  ObjRenderer.h  README.md  config.txt  genViewsShapenet.h  main.cpp  readme.org
Shader/: brdf.frag  coord.frag  geo.vert  main.frag  norm.frag  phong.frag
envmaps/: envmap2.hdr
test/: model.mtl
test/model_views/: 0_0.exr  0_0_norm.exr  0_10.exr  0_10_norm.exr  0_20.exr  0_20_norm.exr  100_0.exr  100_0_norm.exr  100_10.exr  100_10_norm.exr  100_20.exr  100_20_norm.exr  120_0.exr  120_0_norm.exr  120_10.exr  120_10_norm.exr  120_20.exr  120_20_norm.exr  140_0.exr  140_0_norm.exr  140_10.exr  140_10_norm.exr  140_20.exr  140_20_norm.exr  160_0.exr  160_0_norm.exr  160_10.exr  160_10_norm.exr  160_20.exr  160_20_norm.exr  180_0.exr  180_0_norm.exr  180_10.exr  180_10_norm.exr  180_20.exr  180_20_norm.exr  200_0.exr  200_0_norm.exr  200_10.exr  200_10_norm.exr  (+68 more)
